--- a/bankmanager-server/src/main/db/templateDB.properties
+++ b/bankmanager-server/src/main/db/templateDB.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Mon Jul 13 10:38:53 CEST 2020
+#Mon Jul 13 12:10:16 CEST 2020
 version=2.3.4
-modified=no
+modified=yes
 tx_timestamp=0
