--- a/bankmanager-server/pom.xml
+++ b/bankmanager-server/pom.xml
@@ -35,10 +35,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 		<dependency>
-			<groupId>com.ontimize.jee</groupId>
-			<artifactId>ontimize-jee-server-rest</artifactId>
-		</dependency>
+   <groupId>com.ontimize.jee</groupId>
+   <artifactId>ontimize-jee-server-rest</artifactId>
+   <version>${ontimize-jee.version}</version>
+</dependency>
 		<dependency>
 			<!-- no incluida en servidres no full jee -->
 			<groupId>com.sun.mail</groupId>
