--- a/bankmanager-war/src/main/webapp/WEB-INF/web.xml
+++ b/bankmanager-war/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,11 @@
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 
+<filter-mapping>
+	<filter-name>corsSecurityFilterChain</filter-name>
+	<url-pattern>/services/rest/*</url-pattern>
+</filter-mapping>
+
 	<!-- TIME FILTER -->
 	<filter>
 		<filter-name>FilterChainTime</filter-name>
